[AS2-6] : Worked on review fixes, fixed the icon visibility issues

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -160,7 +160,7 @@
         margin: 0 0 1.5rem 1rem;
     }
     @include for-media($laptop) {
-        margin-bottom: 2.5rem;
+        margin-bottom: 2.3rem;
     }
     @include for-media($desktop) {
         margin: 0 0 3.5rem 1rem;
